--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 /* header styles */
 
-nav {
+nav ul {
     padding: 0 22px;
     background-color: #1d1d1f;
     list-style-type: none;
@@ -17,8 +17,13 @@ nav {
     width: 100%;
 }
 
-li a {
+ul li a {
     color: #f5f5f7;
+    text-decoration: none;
+}
+
+header p a {
+    color: #0066cc;
     text-decoration: none;
 }
 
@@ -279,12 +284,12 @@ h2 {
 /* media queries */
 
 @media screen and (max-width: 475px) {
-    h2, h1 {
-        margin: 0;
+    nav li {
+        display: none;
     }
 
-    nav li {
-        flex-direction: column;
+    nav li.show-small {
+        display: block;
     }
     
     .multi {
