--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header p a {
 }
 
 .iPhone h1 {
-    font-size: 4em;
+    font-size: 4rem;
 }
 
 .iPhone h2 {
@@ -93,7 +93,7 @@ header p a {
 
 .iPhone-13 h1 {
     color: #ffffff;
-    font-size: 4em;
+    font-size: 4rem;
 }
 
 .iPhone-13 h2 {
@@ -138,7 +138,7 @@ header p a {
 
 .Valentine h2 {
     color: #602d62;
-    font-size: 3.5em;
+    font-size: 3.5rem;
     padding-bottom: 20px;
 }
 
@@ -161,8 +161,8 @@ header p a {
 }
 
 .multi article {
-    height: 60em;
-    width: 50em;
+    height: 60rem;
+    width: 50rem;
     margin: 20px;
     background-position: center;
     background-size: cover;
@@ -172,7 +172,7 @@ header p a {
 .multi article div a {
     color: #2997ff;
     text-decoration: none;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     border-top: 50px;
 }
 
@@ -196,7 +196,7 @@ header p a {
 }
 
 .watch h2 {
-    font-size: 2em;
+    font-size: 2rem;
     font-weight: 300;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -209,7 +209,7 @@ header p a {
 }
 
 .contest h1 {
-    font-size: 3em;
+    font-size: 3rem;
     padding-bottom: 20px;
 }
 
@@ -225,12 +225,12 @@ header p a {
 }
 
 .discount h1 {
-    font-size: 3em;
+    font-size: 3rem;
 }
 
 .discount h2 {
     font-weight: 300;
-    font-size: 2em;
+    font-size: 2rem;
     padding: 20px;
     margin-left: 100px;
     margin-right: 100px;
@@ -244,13 +244,13 @@ header p a {
 
 .future h1 {
     color: #ffffff;
-    font-size: 3em;
+    font-size: 3rem;
 }
 
 .future h2 {
     color: #ffffff;
     font-weight: 300;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     padding: 20px;
     margin-left: 150px;
     margin-right: 150px;
@@ -264,7 +264,7 @@ header p a {
 
 .card h2 {
     font-weight: 300;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     padding: 20px;
     margin-left: 170px;
     margin-right: 170px;
@@ -281,9 +281,32 @@ h2 {
     padding: 50px;
 }
 
+/* footer styles */
+
+footer  {
+    padding-left: 22px;
+    padding-right: 22px;
+    background-color: #e7e7e7;
+    color: #525252;
+    width: 100%;
+}
+
+footer ul {
+    list-style-type: none;
+    width: 50px;
+}
+
+footer ul a {
+
+    text-decoration: none;
+}
+
 /* media queries */
 
 @media screen and (max-width: 475px) {
+    * {
+       
+    }
     nav li {
         display: none;
     }
@@ -298,5 +321,10 @@ h2 {
 
     .multi article {
         width: 100%;
+
+    }
+
+    .multi h1,h2 {
+        padding: 0;
     }
 }
