--- a/style.css
+++ b/style.css
@@ -51,17 +51,20 @@ header p a {
     text-align: center;
 }
 
-.iPhone h1 {
+.iPhone p:nth-child(1) {
     font-size: 4rem;
+    font-weight: 550;
 }
 
-.iPhone h2 {
+.iPhone p:nth-child(2) {
+    font-size: 2rem;
     font-weight: 100;
     padding-bottom: 20px;
 }
 
 .iPhone div {
-    width: 150px;
+    font-size: 2rem;
+    width: 300px;
     display: flex;
     justify-content: space-between;
 }
@@ -91,18 +94,22 @@ header p a {
     text-align: center;
 }
 
-.iPhone-13 h1 {
+.iPhone-13 p:nth-child(1) {
     color: #ffffff;
     font-size: 4rem;
+    font-weight: 550;
+    padding-bottom: 10px;
 }
 
-.iPhone-13 h2 {
+.iPhone-13 p:nth-child(2) {
     color: #ffc0cb;
+    font-size: 2rem;
     padding-bottom: 20px;
 }
 
 .iPhone-13 div {
-    width: 150px;
+    font-size: 1.5rem;
+    width: 300px;
     display: flex;
     justify-content: space-between;
 }
@@ -116,7 +123,7 @@ header p a {
     text-decoration: underline;
 }
 
-/* iPhone Vqlentine styles */
+/* iPhone Valentine styles */
 
 .Valentine {
     width: 100%;
@@ -131,18 +138,21 @@ header p a {
     text-align: center;
 }
 
-.Valentine h1 {
+.Valentine p:nth-child(1) {
     color: #602d62;
+    font-size: 1.5rem;
     font-weight: 600;
 }
 
-.Valentine h2 {
+.Valentine p:nth-child(2) {
     color: #602d62;
     font-size: 3.5rem;
     padding-bottom: 20px;
 }
 
 .Valentine div a {
+    font-size: 1.5rem;
+    width: 300px;
     color: #2997ff;
     text-decoration: none;
 }
@@ -189,23 +199,35 @@ header p a {
 
 .watch {
     background-image: url("https://www.apple.com/v/home/aj/images/promos/watch-series-7/tile_watch__e9n11b6m6yq2_large.jpg");
+    background-position: center;
+    background-size: cover;
 }
 
-.watch h1 {
-    padding-bottom: 20px;
+.watch p:nth-child(1) {
+    image-resolution: 110%;
+    color: #d02f34;
+    padding: 20px;
 }
 
-.watch h2 {
+.watch p:nth-child(2) {
     font-size: 2rem;
     font-weight: 300;
-    padding-top: 20px;
     padding-bottom: 20px;
+}
+
+.watch div {
+    position: center;
+    width: 300px;
+    display: flex;
+    justify-content: space-between;
 }
 
 /* ----- */
 
 .contest {
     background-image: url("https://www.apple.com/v/home/aj/images/promos/shot-on-iphone/tile_soip__f0c6lef982em_large.jpg");
+    background-position: center;
+    background-size: cover;
 }
 
 .contest h1 {
@@ -222,6 +244,8 @@ header p a {
 
 .discount {
     background-image: url("https://www.apple.com/v/home/aj/images/promos/watch-heart-month/promo_watch_heart__dlf8uc5h0kae_large.jpg");
+    background-position: center;
+    background-size: cover;
 }
 
 .discount h1 {
@@ -240,6 +264,8 @@ header p a {
 
 .future {
     background-image: url("https://www.apple.com/v/home/aj/images/promos/watch-black-unity/promo_watch__fo7j0tnywi2q_large.jpg");
+    background-position: center;
+    background-size: cover;
 }
 
 .future h1 {
@@ -260,6 +286,8 @@ header p a {
 
 .card {
     background-image: url("https://www.apple.com/v/home/aj/images/promos/apple-card/tile__cauwwcyyn9hy_large.jpg");
+    background-position: center;
+    background-size: cover;
 }
 
 .card h2 {
@@ -274,6 +302,8 @@ header p a {
 
 .tv {
     background-image: url("https://www.apple.com/v/home/aj/images/promos/tv-plus-the-sky-is-everywhere/promo_sky__fu99g2ymabiy_large.jpg");
+    background-position: center;
+    background-size: cover;
 }
 
 .tv h1,
@@ -283,7 +313,7 @@ h2 {
 
 /* footer styles */
 
-footer  {
+footer {
     padding-left: 22px;
     padding-right: 22px;
     background-color: #e7e7e7;
@@ -291,9 +321,14 @@ footer  {
     width: 100%;
 }
 
+.links {}
+
+.links ul li {
+    margin-bottom: 2px;
+}
+
 footer ul {
     list-style-type: none;
-    width: 50px;
 }
 
 footer ul a {
@@ -304,9 +339,7 @@ footer ul a {
 /* media queries */
 
 @media screen and (max-width: 475px) {
-    * {
-       
-    }
+
     nav li {
         display: none;
     }
@@ -314,17 +347,53 @@ footer ul a {
     nav li.show-small {
         display: block;
     }
-    
+
     .multi {
         flex-direction: column;
     }
 
     .multi article {
         width: 100%;
-
     }
 
-    .multi h1,h2 {
+    h1 {
         padding: 0;
+        font-size: 0.5rem;
+    }
+
+    .iPhone {
+        background-image: url("https://www.apple.com/v/home/aj/images/heroes/iphone-13-pro/hero_iphone_13pro__dhnsegysa42u_small.jpg");
+    }
+
+    .iPhone-13 {
+        background-image: url("https://www.apple.com/v/home/aj/images/heroes/iphone-13/hero_iphone_13__f194u1rdooeq_small_2x.jpg");
+    }
+
+    .Valentine {
+        background-image: url("https://www.apple.com/v/home/aj/images/heroes/valentines-day-last-chance/hero_vday22__bt5gpd2vjafm_small.jpg");
+    }
+
+    .watch {
+        background-image: url("https://www.apple.com/v/home/aj/images/promos/watch-series-7/tile_watch__e9n11b6m6yq2_small.jpg");
+    }
+
+    .contest {
+        background-image: url("https://www.apple.com/v/home/aj/images/promos/shot-on-iphone/tile_soip__f0c6lef982em_small.jpg");
+    }
+
+    .discount {
+        background-image: url("https://www.apple.com/v/home/aj/images/promos/watch-heart-month/promo_watch_heart__dlf8uc5h0kae_small.jpg");
+    }
+
+    .future {
+        background-image: url("https://www.apple.com/v/home/aj/images/promos/watch-black-unity/promo_watch__fo7j0tnywi2q_small.jpg");
+    }
+
+    .card {
+        background-image: url("https://www.apple.com/v/home/aj/images/promos/apple-card/tile__cauwwcyyn9hy_small.jpg");
+    }
+
+    .tv {
+        background-image: url("https://www.apple.com/v/home/aj/images/promos/tv-plus-the-sky-is-everywhere/promo_sky__fu99g2ymabiy_small.jpg");
     }
 }
